<resources>

    <string name="app_name">CarReview</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="txtHelp">Help</string>
    <string name="txtForgotPassword"> Forgot password?</string>
    <string name="txtRegister">Register</string>

    <string name="title_home">Home</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_post">Post</string>
    <string name="title_profile">Profile</string>
    <string name="title_more">More</string>

    <string name="password_error">Enter new password</string>
    <string name="user_error">Enter new username</string>
</resources>
