<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            app:srcCompat="@drawable/car_logo_login"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:elevation="@dimen/_2sdp"
            android:textColorHint="#ffff"
            android:id="@+id/etUsername"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/border_edittext"
            android:drawableLeft="@drawable/ic_user"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName"
            android:textSize="16dp"
            android:textColor="#ffff"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_above="@+id/etPassword"
            android:layout_centerHorizontal="true" />

        <EditText
            android:elevation="@dimen/_2sdp"
            android:textColorHint="#ffff"
            android:id="@+id/etPassword"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/border_edittext"
            android:drawableLeft="@drawable/ic_pass"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="#ffff"
            android:layout_marginBottom="@dimen/_80sdp"
            android:layout_alignBottom="@+id/cardViewLogin"
            android:layout_alignLeft="@+id/etUsername"
            android:layout_alignStart="@+id/etUsername" />

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_220sdp"
            android:layout_height="@dimen/_40sdp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            android:id="@+id/cardViewLogin"
            android:layout_marginBottom="@dimen/_80sdp"
            android:layout_above="@+id/relativeLayout"
            android:layout_centerHorizontal="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Login"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtForgotPassword"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  |  "
                    android:textColor="#000000"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:id="@+id/tvHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txtForgotPassword"
                    android:text="@string/txtHelp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_1sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="#ffff"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  " />

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/txtForgotPassword"
                    android:text="@string/txtRegister"
                    android:textStyle="italic"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_9sdp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

